# rz-hexagon

./: .gitignore  .gitmodules  Conf.py  DuplexInstruction.py  HardwareRegister.py  HexagonArchInfo.py  Immediate.py  ImplementationException.py  Instruction.py  InstructionEncoding.py  InstructionTemplate.py  LLVMImporter.py  Operand.py  Paths.py  PluginInfo.py  README.md  REUSE.toml  Register.py  SubInstruction.py  UnexpectedException.py  __init__.py  helperFunctions.py  importer.py  optional_requirements.txt  paths.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yaml  flake8.yml  reuse.yaml  unittests.yaml
.reuse/: dep5
Tests/: testCodeGeneration.py  testDuplex.py  testEncoding.py  testHelperFunction.py  testImmediate.py  testInstruction.py  testRegister.py
hand-written/hexagon_arch_c/: include.c
hand-written/hexagon_arch_h/: includes.h
handwritten/: README.md  misc_il_insns.json
import/: Hexagon-Prog-Manual-v67-Ch-SYSTEM.txt  Instruction-template.json  README.md  Register-template.json  Register64-template.json  SysRegs-template.json  SysRegs64-template.json  gen_registers.py  import_instructions.py
rizin/: Makefile  analysis_hexagon.c  asm_hexagon.c  hexagon.c  hexagon.h  hexagon_analysis.c  hexagon_disas.c  hexagon_insn.h
rzhexagon/: Conf.py  HardwareRegister.py  HexagonArchInfo.py  Immediate.py  ImplementationException.py  Instruction.py  InstructionEncoding.py  InstructionTemplate.py  LLVMImporter.py  Operand.py  PluginInfo.py  Register.py  SubInstruction.py  UnexpectedException.py  __init__.py  helperFunctions.py
(+278 files in other folders)
